--- a/src/components/Menu.scss
+++ b/src/components/Menu.scss
@@ -77,7 +77,7 @@
       border-radius: 12px;
       background: #00ffb3;
       position: relative;
-      font{
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -100,7 +100,7 @@
       font-family: Pretendard400;
       font-size: 14px;
       position: relative;
-      font{
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -138,13 +138,13 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        color:#1a1a1a;
+        color: #1a1a1a;
         font-family: Pretendard600;
         font-size: 16px;
         border-radius: 12px;
-        background:#00ffb3;
+        background: #00ffb3;
         position: relative;
-        font{
+        font {
           font-family: inherit !important;
           font-size: inherit !important;
           font-weight: inherit !important;
@@ -183,7 +183,7 @@
               height: 26px !important;
               object-fit: cover;
             }
-            font{
+            font {
               font-family: inherit !important;
               font-size: inherit !important;
               font-weight: inherit !important;
@@ -211,7 +211,7 @@
             font-family: Pretendard500;
             font-size: 12px;
             font {
-              font-family:  inherit !important;
+              font-family: inherit !important;
               font-size: inherit !important;
               font-weight: inherit !important;
               line-height: inherit !important;
@@ -221,12 +221,12 @@
             }
           }
           .level {
-            color:#aaa;
+            color: #aaa;
             font-family: Pretendard400;
             font-size: 12px;
             font-style: normal;
             font {
-              font-family:  inherit !important;
+              font-family: inherit !important;
               font-size: inherit !important;
               font-weight: inherit !important;
               line-height: inherit !important;
@@ -243,7 +243,8 @@
           gap: 8px;
           &.active {
             .menu__box__my-page__info__bottom {
-              height: 162px;
+              height: 107.2px;
+              // max-height: calc((24px * 3) + (4px * 3) + 22px);
               transition: 0.3s;
               opacity: 1;
               margin-top: 0px;
@@ -281,7 +282,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                font{
+                font {
                   font-family: inherit !important;
                   font-size: inherit !important;
                   font-weight: inherit !important;
@@ -296,7 +297,7 @@
                 font-family: Pretendard400;
                 font-size: 12px;
                 font-style: normal;
-                font{
+                font {
                   font-family: inherit !important;
                   font-size: inherit !important;
                   font-weight: inherit !important;
@@ -329,7 +330,7 @@
                 color: #f1f1f1;
                 font-family: Pretendard500;
                 font-size: 12px;
-                font{
+                font {
                   font-family: inherit !important;
                   font-size: inherit !important;
                   font-weight: inherit !important;
@@ -351,7 +352,7 @@
                   width: 14px;
                   height: 14px;
                 }
-                font{
+                font {
                   font-family: inherit !important;
                   font-size: inherit !important;
                   font-weight: inherit !important;
@@ -375,7 +376,7 @@
         margin-top: 4px;
         margin-bottom: 16px;
         transition: 0.2s;
-        font{
+        font {
           font-family: inherit !important;
           font-size: inherit !important;
           font-weight: inherit !important;
@@ -400,15 +401,15 @@
       color: #fff;
       font-family: Pretendard400;
       font-size: 14px;
-          font {
-            font-family:  inherit !important;
-            font-size: inherit !important;
-            font-weight: inherit !important;
-            line-height: inherit !important;
-            font-style: inherit !important;
-            color: inherit !important;
-            letter-spacing: inherit !important;
-          }
+      font {
+        font-family: inherit !important;
+        font-size: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+        font-style: inherit !important;
+        color: inherit !important;
+        letter-spacing: inherit !important;
+      }
     }
     .menu__box__gnb-list {
       width: 100%;
@@ -487,7 +488,7 @@
           font-size: 12px;
           padding: 0 16px;
           position: relative;
-          font{
+          font {
             font-family: inherit !important;
             font-size: inherit !important;
             font-weight: inherit !important;
@@ -544,7 +545,7 @@
               }
             }
           } //earn--END--
-          font{
+          font {
             font-family: inherit !important;
             font-size: inherit !important;
             font-weight: inherit !important;
@@ -556,7 +557,7 @@
             font-variant: inherit !important;
             text-transform: inherit !important;
             text-rendering: inherit !important;
-            -webkit-font-smoothing: inherit !important; 
+            -webkit-font-smoothing: inherit !important;
           }
         } //menu__box__gnb-list__item__btn--END--
 
@@ -590,7 +591,7 @@
               &:hover {
                 background: #a9d400;
               }
-              font{
+              font {
                 font-family: inherit !important;
                 font-size: inherit !important;
                 font-weight: inherit !important;
@@ -621,7 +622,7 @@
         align-items: center;
         justify-content: center;
         gap: 4px;
-        font{
+        font {
           font-size: inherit !important;
           font-family: inherit !important;
           font-weight: inherit !important;
@@ -632,7 +633,7 @@
           font-variant: inherit !important;
           text-transform: inherit !important;
           text-rendering: inherit !important;
-          -webkit-font-smoothing: inherit !important; 
+          -webkit-font-smoothing: inherit !important;
           font-style: inherit !important;
           font-family: inherit !important;
         }
@@ -724,8 +725,8 @@
   padding: 12px 24px;
   color: #1a1a1a;
   font: 12px;
-  font-family:Pretendard400;
-  font{
+  font-family: Pretendard400;
+  font {
     font-family: inherit !important;
     font-size: inherit !important;
     font-weight: inherit !important;
@@ -781,7 +782,7 @@
       font-family: Pretendard500;
       font-size: 12px;
       font-style: normal;
-      font{
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -797,7 +798,7 @@
       font-family: Pretendard600;
       font-size: 24px;
       margin-bottom: 24px;
-      font{
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -844,15 +845,15 @@
           font-family: Pretendard600;
           font-size: 10px;
           font-style: normal;
-            font{
-              font-family: inherit !important;
-              font-size: inherit !important;
-              font-weight: inherit !important;
-              line-height: inherit !important;
-              font-style: inherit !important;
-              color: inherit !important;
-              letter-spacing: inherit !important;
-            }
+          font {
+            font-family: inherit !important;
+            font-size: inherit !important;
+            font-weight: inherit !important;
+            line-height: inherit !important;
+            font-style: inherit !important;
+            color: inherit !important;
+            letter-spacing: inherit !important;
+          }
           .sky {
             overflow: hidden;
             -webkit-box-orient: vertical;
@@ -863,7 +864,7 @@
             font-size: 10px;
             font-style: normal;
             line-height: 100%;
-            font{
+            font {
               font-family: inherit !important;
               font-size: inherit !important;
               font-weight: inherit !important;
@@ -883,7 +884,7 @@
             font-size: 10px;
             font-style: normal;
             line-height: 100%;
-            font{
+            font {
               font-family: inherit !important;
               font-size: inherit !important;
               font-weight: inherit !important;
@@ -901,7 +902,7 @@
         font-size: 10px;
         font-style: normal;
         line-height: normal;
-        font{
+        font {
           font-family: inherit !important;
           font-size: inherit !important;
           font-weight: inherit !important;
@@ -920,7 +921,7 @@
         line-height: normal;
         text-align: right;
         margin-left: auto;
-        font{
+        font {
           font-family: inherit !important;
           font-size: inherit !important;
           font-weight: inherit !important;
