--- a/src/components/create/SelectItem.scss
+++ b/src/components/create/SelectItem.scss
@@ -1,310 +1,406 @@
 .create__select-components {
+  // display: flex;
+  // flex-direction: column;
+  // gap: 24px;
+  // padding: 16px;
+  // border: 1px solid #222;
+  // border-radius: 12px;
+  // margin-bottom: 40px;
+  display: flex;
+  height: 100%;
+  padding: 40px 30px 30px 30px;
+  flex-direction: column;
+  gap: 30px;
+  align-items: flex-start;
+  flex: 1 0 0;
+
+  .tag-select-title {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    img {
+      width: 120px;
+      height: 120px;
+      aspect-ratio: 1/1;
+    }
+    .tag-select-title--group {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 8px;
+      h2 {
+        color: var(--White, #fff);
+        font-family: Pretendard700;
+        font-size: 24px;
+        font-style: normal;
+        line-height: 34px;
+      }
+      p {
+        white-space: pre-line;
+        color: var(--Grey-600, #767676);
+        font-family: Pretendard400;
+        font-size: 16px;
+        font-style: normal;
+        line-height: 24px;
+      }
+      &::after {
+        position: absolute;
+        content: '';
+        width: 5px;
+        height: 5px;
+        top: -2px;
+        left: -4px;
+        background-color: #cf0;
+        border-radius: 100%;
+      }
+    }
+
+    .tag-select-title__dropdown-toggle {
+      width: 50px;
+      height: 24px;
+      border-radius: 20px;
+      background-color: #222;
+      transition: 0.3s;
+      display: flex;
+      padding: 4px;
+      align-items: center;
+      cursor: pointer;
+      &.visible {
+        background-color: #cf0;
+      }
+    }
+    .tag-select-title__dropdown-thumb {
+      width: 18px;
+      height: 18px;
+      background-color: #f1f1f1;
+      border-radius: 20px;
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.4);
+      transition: 0.3s all;
+      position: relative;
+      left: 0;
+      &.visible {
+        left: calc(100% - 18px);
+      }
+    }
+  }
+
+  .tag-select {
     display: flex;
     flex-direction: column;
-    gap: 24px;
-    padding: 16px;
-    border: 1px solid #222;
-    border-radius: 12px;
-    margin-bottom: 40px;
+    margin-top: 12px;
+    gap: 10px;
 
-    .tag-select-title {
-        display: flex;
-        gap: 16px;
-        align-items: center;
-        .tag-select-title__text {
-            color:#cf0;
-            font-family: Pretendard400;
-            font-size: 24px;
-            position: relative;
-            margin-bottom: 8px;
-            &::after {
-                position: absolute;
-                content: '';
-                width: 5px;
-                height: 5px;
-                top: -2px;
-                left: -4px;
-                background-color: #cf0;
-                border-radius: 100%;
-            }
-        }
-
-        .tag-select-title__dropdown-toggle {
-            width: 50px;
-            height: 24px;
-            border-radius: 20px;
-            background-color: #222;
-            transition: 0.3s;
-            display: flex;
-            padding: 4px;
-            align-items: center;
-            cursor: pointer;
-            &.visible {
-                background-color: #cf0;
-            }
-        }
-        .tag-select-title__dropdown-thumb {
-            width: 18px;
-            height: 18px;
-            background-color: #f1f1f1;
-            border-radius: 20px;
-            box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.4);
-            transition: 0.3s all;
-            position: relative;
-            left: 0;
-            &.visible {
-                left: calc(100% - 18px);
-            }
-        }
+    .tag-title__block {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-
-    .tag-select {
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-
-        .tag-title__block {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .tag-title__notice {
-            color:#ffd700;
-            font-family: Pretendard400;
-            font-size: 12px;
-            padding: 4px;
-            height: 23px;
-            background-color: #222;
-            border-radius: 100px;
-            width: fit-content;
-        }
-        .tag-title {
-            font-family: Pretendard400;
-            font-size: 18px;
-            color: #f1f1f1;
-        }
-        .tag-sub-title {
-            color: #a9d400;
-            font-family: Pretendard400;
-            font-size: 14px;
-            display: flex;
-            align-items: center;
-            span {
-                font-size: 12px;
-                font-family: Pretendard400;
-                margin-left: 4px;
-                color: red;
-            }
-        }
-        .tag-preset {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 12px;
-        }
-        .tag-input-box {
-            position: relative;
-        }
-        .tag-input {
-            height: 54px;
-            padding: 12px;
-            border-radius: 12px;
-            border: 1px solid #383838;
-            background-color: #0b0b0c;
-            transition: 0.3s all;
-            resize: none;
-            &:focus {
-                border-color: #cf0;
-            }
-        }
-        .tag-input-comment-button-wrap {
-            position: absolute;
-            display: flex;
-            gap: 16px;
-            right: 12px;
-            top: 50%;
-            transform: translateY(-50%);
-        }
-        .tag-input-comment-button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #cf0;
-            width: 120px;
-            height: 30px;
-            color: #1a1a1a;
-            font-family: Pretendard600;
-            font-size: 14px;
-            letter-spacing: 0.42px;
-            border-radius: 12px;
-            position: relative;
-            transition: 0.2s all;
-            &:hover {
-                transform: translateY(5px);
-                &::after {
-                    transform: translateY(0px);
-                }
-            }
-
-            &::after {
-                content: '';
-                box-sizing: border-box;
-                transition: 0.2s all;
-                position: absolute;
-                width: calc(100%);
-                height: 100%;
-                top: 0;
-                left: 0;
-                transform: translateY(5px);
-                border-radius: 12px;
-                border: 1px solid #cf0;
-            }
-
-            input {
-                background-color: #222;
-                position: absolute;
-                height: 0px;
-                width: 0px;
-                border: none;
-            }
-        }
-
-        .tag-selected {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 16px;
-        }
-        .tag-button {
-            padding: 8px;
-            border-radius: 10px 2px 10px 10px;
-            font-family: Pretendard400;
-            font-size: 14px;
-            position: relative;
-            display: flex;
-            align-items: center;
-            &.presets {
-                border: 1px solid #aaa;
-                color: #aaa;
-                gap: 4px;
-                &:hover,
-                &.enable {
-                    border: 1px solid #cf0;
-                    color: #cf0;
-                    &::after {
-                        background-color: #cf0;
-                    }
-                }
-
-                &::after {
-                    content: '';
-                    position: absolute;
-                    width: 4px;
-                    height: 4px;
-                    top: 2px;
-                    right: 2px;
-                    border-radius: 100%;
-                    background-color: #aaa;
-                }
-            }
-
-            &.selected {
-                gap: 4px;
-                background-color: #cf0;
-                color: #1a1a1a;
-            }
-        }
+    .tag-title__notice {
+      color: #ffd700;
+      font-family: Pretendard400;
+      font-size: 12px;
+      padding: 4px;
+      height: 23px;
+      background-color: #222;
+      border-radius: 100px;
+      width: fit-content;
     }
-
-    .tag-title__tempos {
-        padding: 4px;
-        border-radius: 100px;
-        font-family: Pretendard400;
+    .tag-title {
+      font-family: Pretendard400;
+      font-size: 18px;
+      color: #f1f1f1;
+    }
+    .tag-sub-title {
+      color: #a9d400;
+      font-family: Pretendard400;
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      span {
         font-size: 12px;
-        border: 1px solid;
-        width: fit-content;
+        font-family: Pretendard400;
+        margin-left: 4px;
+        color: red;
+      }
+    }
+    .tag-preset {
+      display: flex;
+      align-items: center;
+      align-content: center;
+      gap: 8px;
+      align-self: stretch;
+      flex-wrap: wrap;
+    }
+    .tag-input-box {
+      position: relative;
+    }
+    .tag-input {
+      // width: 100%;
+      // height: 54px;
+      // padding: 12px;
+      // border-radius: 12px;
+      // border: 1px solid #383838;
+      // background-color: #0b0b0c;
+      // transition: 0.3s all;
+      // resize: none;
+      display: flex;
+      height: 54px;
+      padding: 12px 20px;
+      justify-content: space-between;
+      align-items: center;
+      align-self: stretch;
+      border-radius: 12px;
+      border: 1px solid var(--White-20, rgba(255, 255, 255, 0.2));
+      background: var(--Black-10, rgba(0, 0, 0, 0.1));
+      backdrop-filter: blur(20px);
+      &:focus {
+        transition: all 0.3s;
+        border-color: #3a9de3;
+      }
+      &[disabled],
+      &[readOnly] {
+        transition: all 0.3;
+        cursor: not-allowed;
+        opacity: 0.3;
+      }
+    }
+    .tag-input-comment-button-wrap {
+      position: absolute;
+      display: flex;
+      gap: 16px;
+      right: 12px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    .tag-input-comment-button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #cf0;
+      width: 120px;
+      height: 30px;
+      color: #1a1a1a;
+      font-family: Pretendard600;
+      font-size: 14px;
+      letter-spacing: 0.42px;
+      border-radius: 12px;
+      position: relative;
+      transition: 0.2s all;
+      &:hover {
+        transform: translateY(5px);
+        &::after {
+          transform: translateY(0px);
+        }
+      }
 
-        &.slow {
-            color: #5a9bf6;
-        }
-        &.medium {
-            color: #ffd700;
-        }
-        &.fast {
-            color: #ff6f61;
-        }
+      &::after {
+        content: '';
+        box-sizing: border-box;
+        transition: 0.2s all;
+        position: absolute;
+        width: calc(100%);
+        height: 100%;
+        top: 0;
+        left: 0;
+        transform: translateY(5px);
+        border-radius: 12px;
+        border: 1px solid #cf0;
+      }
+
+      input {
+        background-color: #222;
+        position: absolute;
+        height: 0px;
+        width: 0px;
+        border: none;
+      }
     }
 
-    .tag-select__range {
-        position: relative;
-        height: 16px;
-        background-color: #383838;
-        border-radius: 25px;
-        margin-top: 40px;
-
-        .tag-select__range--applicable {
-            position: absolute;
-            height: 16px;
-            left: 0;
-            background-color: #cf0;
-            border-radius: 25px;
-            transition: 0.6s;
-        }
-
-        .tag-select__range--thumb {
-            position: absolute;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            width: 24px;
-            height: 24px;
-            border-radius: 4px;
-            background-color: #cf0;
-            box-shadow: -4px 0px 4px 0px rgba(44, 58, 0, 0.6);
-            .tag-select__range--thumb-tick {
-                position: absolute;
-                top: -45px;
-                left: 50%;
-                transform: translateX(-50%);
-                background-color: #222;
-                padding: 8px 12px;
-                border-radius: 8px;
-                border: 1px solid #cf0;
-                text-align: center;
-                font-family: Pretendard700;
-                font-size: 12px;
-                white-space: nowrap;
-                line-height: 16px; /* 133.333% */
-                span {
-                    color: #cf0;
-                    font: inherit;
-                }
-                &::before {
-                    z-index: -1;
-                    content: '';
-                    position: absolute;
-                    border-bottom: 10px solid transparent;
-                    border-top: 10px solid transparent;
-                    border-left: 10px solid #cf0;
-                    border-right: 10px solid transparent;
-                    bottom: -20px;
-                    left: 50%;
-                    transform: translateX(-50%) rotate(90deg);
-                }
-            }
-        }
+    .tag-selected {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 16px;
     }
+    .tag-button {
+      padding: 8px;
+      border-radius: 10px 2px 10px 10px;
+      font-family: Pretendard400;
+      font-size: 14px;
+      position: relative;
+      display: flex;
+      align-items: center;
+      &.presets {
+        display: flex;
+        padding: 12px 16px;
+        justify-content: center;
+        align-items: center;
+        gap: 8px;
+        border-radius: 12px;
+        border: 1px solid var(--White-20, rgba(255, 255, 255, 0.2));
+        background: var(--White-05, rgba(255, 255, 255, 0.05));
+        color: var(--Grey-600, #767676);
+        font-family: Pretendard400;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 22px;
+        &:hover {
+          background-color: #3a9de3;
+          color: #fff;
+          transition: 0.3s all;
+        }
+        &.enable {
+          background-color: #3a9de3;
+          color: #fff;
+          transition: 0.3s all;
+          font-family: Pretendard700;
+          img.cancel-icon {
+            display: inline-block; // ⭐ enable일 때만 X 아이콘 보이기
+          }
+          &::after {
+            background-color: #3a9de3;
+            color: #fff;
+            font-family: Pretendard700;
+            font-size: 14px;
+            font-style: normal;
+            line-height: 22px;
+            transition: 0.3s all;
+          }
+        }
+        img.cancel-icon {
+          display: inline-block; // ⭐ selected에도 X 표시
+          width: 22px;
+          height: 22px;
+          aspect-ratio: 1/1;
+        }
+
+        &.disabled-button {
+          pointer-events: none; // ✅ 클릭 방지
+          cursor: not-allowed;
+          background: var(--White-05, rgba(255, 255, 255, 0.05)); // 기본 배경 유지
+          color: var(--Grey-600, #767676); // 기본 글자색 유지
+
+          // ✅ hover 제거: 강제 재정의
+          &:hover {
+            background-color: var(--White-05, rgba(255, 255, 255, 0.05));
+            color: var(--Grey-600, #767676);
+          }
+        }
+      }
+      // &.presets:disabled {
+      //   opacity: 0.3;
+      // }
+
+      &.selected {
+        background-color: #3a9de3;
+        color: #fff;
+        display: flex;
+        padding: 12px 16px;
+        justify-content: center;
+        align-items: center;
+        gap: 8px;
+        border-radius: 12px;
+        border: 1px solid var(--White-20, rgba(255, 255, 255, 0.2));
+        font-family: Pretendard700;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 22px;
+      }
+    }
+  }
+
+  .tag-title__tempos {
+    padding: 4px;
+    border-radius: 100px;
+    font-family: Pretendard400;
+    font-size: 12px;
+    border: 1px solid;
+    width: fit-content;
+
+    &.slow {
+      color: #5a9bf6;
+    }
+    &.medium {
+      color: #ffd700;
+    }
+    &.fast {
+      color: #ff6f61;
+    }
+  }
+
+  .tag-select__range {
+    position: relative;
+    height: 16px;
+    background-color: #383838;
+    border-radius: 25px;
+    margin-top: 40px;
+
+    .tag-select__range--applicable {
+      position: absolute;
+      height: 16px;
+      left: 0;
+      background-color: #cf0;
+      border-radius: 25px;
+      transition: 0.6s;
+    }
+
+    .tag-select__range--thumb {
+      position: absolute;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      width: 24px;
+      height: 24px;
+      border-radius: 4px;
+      background-color: #cf0;
+      box-shadow: -4px 0px 4px 0px rgba(44, 58, 0, 0.6);
+      .tag-select__range--thumb-tick {
+        position: absolute;
+        top: -45px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: #222;
+        padding: 8px 12px;
+        border-radius: 8px;
+        border: 1px solid #cf0;
+        text-align: center;
+        font-family: Pretendard700;
+        font-size: 12px;
+        white-space: nowrap;
+        line-height: 16px; /* 133.333% */
+        span {
+          color: #cf0;
+          font: inherit;
+        }
+        &::before {
+          z-index: -1;
+          content: '';
+          position: absolute;
+          border-bottom: 10px solid transparent;
+          border-top: 10px solid transparent;
+          border-left: 10px solid #cf0;
+          border-right: 10px solid transparent;
+          bottom: -20px;
+          left: 50%;
+          transform: translateX(-50%) rotate(90deg);
+        }
+      }
+    }
+  }
 }
 
 .sub-banner__tags {
-    position: relative;
-    z-index: 2;
+  position: relative;
+  z-index: 2;
 }
 @media screen and (max-width: 768px) {
-    .create__select-components {
-        .tag-select {
-            .tag-title__block {
-                align-items: flex-start;
-                gap: 8px;
-                flex-direction: column;
-            }
-        }
+  .create__select-components {
+    .tag-select {
+      .tag-title__block {
+        align-items: flex-start;
+        gap: 8px;
+        flex-direction: column;
+      }
     }
+  }
 }
