--- a/src/components/create/SubBanner.scss
+++ b/src/components/create/SubBanner.scss
@@ -56,6 +56,7 @@
     }
   }
   .sub-banner__message {
+    width: 100%;
     color: var(--Grey-600, #767676);
     font-family: Pretendard400;
     font-size: 14px;
