--- a/src/components/create/SubBanner.scss
+++ b/src/components/create/SubBanner.scss
@@ -9,20 +9,21 @@
   border: 1px solid var(--White-20, rgba(255, 255, 255, 0.2));
   position: relative;
   z-index: 1;
-  overflow: hidden;
-  //   .create__sub-banner-bg {
-  //     position: absolute;
-  //     top: 0;
-  //     z-index: 2;
+  overflow: visible;
+  .create__sub-banner-bg {
+    overflow: hidden; // 배경 이미지 영역만 숨김 처리
+    // position: absolute;
+    // top: 0;
+    // z-index: 2;
 
-  //     &.left {
-  //       left: 24px;
-  //     }
+    // &.left {
+    //   left: 24px;
+    // }
 
-  //     &.right {
-  //       right: 24px;
-  //     }
-  //   }
+    // &.right {
+    //   right: 24px;
+    // }
+  }
   .sub-banner__title-group {
     display: flex;
     width: 100%;
