--- a/src/components/ModalWrap.scss
+++ b/src/components/ModalWrap.scss
@@ -4,45 +4,75 @@
   position: fixed;
   left: 0;
   top: 0;
-  background:#0b0b0cb5;
+  background: #0b0b0cb5;
   z-index: 1000;
   display: flex;
   align-items: center;
   justify-content: center;
 
   .modal-content-box {
-    max-width: 400px;
-    width: 100%;
-    background-color: #222;
-    border-radius: 16px;
-    border: 1px solid #222;
-    background: #1a1a1a;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.4);
+    display: flex;
+    width: 500px;
+    height: 680px;
+    padding: 30px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-shrink: 0;
+    border-radius: 24px;
+    border: 1px solid var(--White-05, rgba(255, 255, 255, 0.05));
+    background: var(--Grey-900, #181818);
+    // max-width: 400px;
+    // width: 100%;
+    // background-color: #222;
+    // border-radius: 16px;
+    // border: 1px solid #222;
+    // background: #1a1a1a;
+    // box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.4);
     .modal-header {
-      padding: 17px;
-      text-align: center;
-      position: relative;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      align-self: stretch;
+      color: var(--White, #fff);
+      font-family: Pretendard700;
+      font-size: 20px;
+      font-style: normal;
+      line-height: 30px; /* 150% */
+
+      // padding: 17px;
+      // text-align: center;
+      // position: relative;
+      // color: var(--White, #fff);
+      // font-family: Pretendard700;
+      // font-size: 20px;
+      // font-style: normal;
+      // line-height: 30px;
+
+      .modal-close {
+        // position: absolute;
+        width: 26px;
+        height: 26px;
+        aspect-ratio: 1/1;
+        // margin-left: auto;
+        // right: 17px;
+        // top: 17px;
+        cursor: pointer;
+      }
     }
     .modal-title {
       color: #f1f1f1;
       font-size: 20px;
       font-family: Pretendard600;
-            font{
-                font-family: inherit !important;
-                font-size: inherit !important;
-                font-weight: inherit !important;
-                line-height: inherit !important;
-                font-style: inherit !important;
-                color: inherit !important;
-                letter-spacing: inherit !important;
-            }
-    }
-    .modal-close {
-      // position: absolute;
-      margin-left: auto;
-      right: 17px;
-      top: 17px;
-      cursor: pointer;
+      font {
+        font-family: inherit !important;
+        font-size: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+        font-style: inherit !important;
+        color: inherit !important;
+        letter-spacing: inherit !important;
+      }
     }
     .modal-content {
       padding: 20px;
@@ -71,17 +101,17 @@
 .host-tournament-txt {
   width: 100%;
   text-align: center;
-  color:#888;
+  color: #888;
   text-align: center;
   font-size: 12px;
-  font{
-      font-family: inherit !important;
-      font-size: inherit !important;
-      font-weight: inherit !important;
-      line-height: inherit !important;
-      font-style: inherit !important;
-      color: inherit !important;
-      letter-spacing: inherit !important;
+  font {
+    font-family: inherit !important;
+    font-size: inherit !important;
+    font-weight: inherit !important;
+    line-height: inherit !important;
+    font-style: inherit !important;
+    color: inherit !important;
+    letter-spacing: inherit !important;
   }
 }
 .host-tournament__btns {
@@ -101,15 +131,15 @@
     text-align: center;
     font-family: Pretendard700;
     font-size: 14px;
-      font{
-          font-family: inherit !important;
-          font-size: inherit !important;
-          font-weight: inherit !important;
-          line-height: inherit !important;
-          font-style: inherit !important;
-          color: inherit !important;
-          letter-spacing: inherit !important;
-      }
+    font {
+      font-family: inherit !important;
+      font-size: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      font-style: inherit !important;
+      color: inherit !important;
+      letter-spacing: inherit !important;
+    }
     &.start-btn {
       background: #ccb3ff;
       border: 1px solid #ccb3ff;
@@ -151,14 +181,14 @@
       font-style: normal;
       line-height: normal;
       text-transform: uppercase;
-      font{
-          font-family: inherit !important;
-          font-size: inherit !important;
-          font-weight: inherit !important;
-          line-height: inherit !important;
-          font-style: inherit !important;
-          color: inherit !important;
-          letter-spacing: inherit !important;
+      font {
+        font-family: inherit !important;
+        font-size: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+        font-style: inherit !important;
+        color: inherit !important;
+        letter-spacing: inherit !important;
       }
       .nation-icon {
         width: 18px;
@@ -186,7 +216,7 @@
         color: #d9d9d9;
         font-family: Pretendard600;
         font-size: 12px;
-        font{
+        font {
           font-family: inherit !important;
           font-size: inherit !important;
           font-weight: inherit !important;
@@ -202,7 +232,7 @@
         font-size: 10px;
         font-style: normal;
         line-height: normal;
-        font{
+        font {
           font-family: inherit !important;
           font-size: inherit !important;
           font-weight: inherit !important;
@@ -228,7 +258,7 @@
             text-align: center;
             font-family: Pretendard600;
             font-size: 12px;
-            font{
+            font {
               font-family: inherit !important;
               font-size: inherit !important;
               font-weight: inherit !important;
@@ -259,7 +289,7 @@
       tbody {
         tr {
           border-radius: 4px;
-          background:#222;
+          background: #222;
           margin: 5px 0;
           display: table-row;
 
@@ -270,7 +300,7 @@
             color: #fff;
             font-family: Pretendard600;
             font-size: 10px;
-            font{
+            font {
               font-family: inherit !important;
               font-size: inherit !important;
               font-weight: inherit !important;
@@ -301,14 +331,14 @@
               color: #fff;
               font-family: Pretendard600;
               font-size: 10px;
-              font{
-                  font-family: inherit !important;
-                  font-size: inherit !important;
-                  font-weight: inherit !important;
-                  line-height: inherit !important;
-                  font-style: inherit !important;
-                  color: inherit !important;
-                  letter-spacing: inherit !important;
+              font {
+                font-family: inherit !important;
+                font-size: inherit !important;
+                font-weight: inherit !important;
+                line-height: inherit !important;
+                font-style: inherit !important;
+                color: inherit !important;
+                letter-spacing: inherit !important;
               }
               &::before {
                 content: '';
@@ -353,14 +383,14 @@
       font-style: normal;
       line-height: normal;
       margin-bottom: 8px;
-      font{
-          font-family: inherit !important;
-          font-size: inherit !important;
-          font-weight: inherit !important;
-          line-height: inherit !important;
-          font-style: inherit !important;
-          color: inherit !important;
-          letter-spacing: inherit !important;
+      font {
+        font-family: inherit !important;
+        font-size: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+        font-style: inherit !important;
+        color: inherit !important;
+        letter-spacing: inherit !important;
       }
     }
     dd {
@@ -381,7 +411,7 @@
         font-family: Pretendard600;
         font-size: 14px;
         transition: 0.3s;
-        font{
+        font {
           font-family: inherit !important;
           font-size: inherit !important;
           font-weight: inherit !important;
@@ -413,14 +443,14 @@
       font-family: Pretendard700;
       font-size: 14px;
       color: #fff;
-      font{
-          font-family: inherit !important;
-          font-size: inherit !important;
-          font-weight: inherit !important;
-          line-height: inherit !important;
-          font-style: inherit !important;
-          color: inherit !important;
-          letter-spacing: inherit !important;
+      font {
+        font-family: inherit !important;
+        font-size: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+        font-style: inherit !important;
+        color: inherit !important;
+        letter-spacing: inherit !important;
       }
       &.filter-modal__btn__reset {
         height: 38px;
@@ -458,21 +488,21 @@
   margin-bottom: 32px;
   dt {
     color: #d9d9d9;
-    font-family:Pretendard700;
+    font-family: Pretendard700;
     font-size: 14px;
     font-style: normal;
     line-height: normal;
     text-transform: capitalize;
     margin-bottom: 8px;
-      font{
-          font-family: inherit !important;
-          font-size: inherit !important;
-          font-weight: inherit !important;
-          line-height: inherit !important;
-          font-style: inherit !important;
-          color: inherit !important;
-          letter-spacing: inherit !important;
-      }
+    font {
+      font-family: inherit !important;
+      font-size: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+      font-style: inherit !important;
+      color: inherit !important;
+      letter-spacing: inherit !important;
+    }
   }
   dd {
     position: relative;
@@ -486,9 +516,9 @@
       bottom: -20px;
       left: 0;
       color: #ff5c63;
-      font-family:Pretendard600;
+      font-family: Pretendard600;
       font-size: 12px;
-      font{
+      font {
         font-family: inherit !important;
         font-size: inherit !important;
         font-weight: inherit !important;
@@ -512,7 +542,7 @@
   color: #1a1a1a;
   font-family: Pretendard700;
   font-size: 14px;
-  font{
+  font {
     font-family: inherit !important;
     font-size: inherit !important;
     font-weight: inherit !important;
@@ -537,14 +567,14 @@
         font-family: Pretendard700;
         font-size: 20px;
         text-transform: capitalize;
-        font{
-            font-family: inherit !important;
-            font-size: inherit !important;
-            font-weight: inherit !important;
-            line-height: inherit !important;
-            font-style: inherit !important;
-            color: inherit !important;
-            letter-spacing: inherit !important;
+        font {
+          font-family: inherit !important;
+          font-size: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+          font-style: inherit !important;
+          color: inherit !important;
+          letter-spacing: inherit !important;
         }
       }
       border: none;
@@ -564,31 +594,31 @@
         font-family: Pretendard400;
         font-size: 13px;
         font-style: normal;
-        font{
-            font-family: inherit !important;
-            font-size: inherit !important;
-            font-weight: inherit !important;
-            line-height: inherit !important;
-            font-style: inherit !important;
-            color: inherit !important;
-            letter-spacing: inherit !important;
+        font {
+          font-family: inherit !important;
+          font-size: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+          font-style: inherit !important;
+          color: inherit !important;
+          letter-spacing: inherit !important;
         }
       }
       .entrants-btn {
         width: 100%;
         border-radius: 4px;
-        background:#ccb3ff;
+        background: #ccb3ff;
         display: flex;
         padding: 12px 20px;
         justify-content: center;
         align-items: center;
         gap: 10px;
         align-self: stretch;
-        color:#1a1a1a;
+        color: #1a1a1a;
         text-align: center;
         font-family: Pretendard700;
         font-size: 16px;
-        font{
+        font {
           font-family: inherit !important;
           font-size: inherit !important;
           font-weight: inherit !important;
